--- a/zz.html
+++ b/zz.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Generic - Spectral by HTML5 UP</title>
@@ -19,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Bright Void</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,10 +22,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="DiscordServer.html">Discord Server</a></li>
+											<li><a href="AboutUs.html">About Us</a></li>
+											<li><a href="ContactUs.html">Contact Us</a></li>
 										</ul>
 									</div>
 								</li>
